[workspace]

members = [
    "awair-exporter",
]

[workspace.metadata.raze]
workspace_path = "//cargo"
genmode = "Remote"
default_gen_buildrs = true
experimental_api = true
render_package_aliases = false
rust_rules_workspace_name = "rules_rust"
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]
