[package]
name = "awair-exporter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.0.0", features = ["full"] }
warp = "^0.3"
prometheus = { version = "^0.12.0", features = ["process"] }
clap = "3.0.0-beta.2"
tracing = "^0.1"
tracing-subscriber = { version = "^0.2", features = ["json"] }
serde_yaml = "^0.8"
serde = { version = "^1.0", features = ["derive"] }
anyhow = "^1.0"
reqwest = { version = "0.11", features = ["json"] }
